# DirtOS

./: .envrc  .gitattributes  .gitignore  .gitmodules  .npmrc  .prettierignore  CONTRIBUTING.md  DEVELOPER.md  README.md  docmd.config.js  docs.versions.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  setup-deb.sh  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json  windows-installer-hooks.nsh
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260317000000_init.sql  20260317000001_schema.sql  20260318000000_canvas_states.sql  20260318000001_phase5.sql  20260318000002_phase6.sql  20260319000000_phase9.sql  20260319000001_phase10a_extensions.sql  20260319000002_phase12_indoor.sql  20260319000003_phase13.sql  20260319000004_phase14_dashboards.sql  20260320000000_phase15_perf_indexes.sql  20260321000000_eol_enrichment.sql  20260322000000_eol_extended_fields.sql  20260322000001_gbif_enrichment.sql  20260322000002_seedling_trays.sql  20260323000000_seed_store.sql  20260323000001_trefle_enrichment.sql  20260323000002_plant_asset_id.sql  20260324000000_plant_canvas_assignment.sql  20260404000000_ha_sensor_connection.sql  20260405000000_inventory_asset_tags.sql  20260408000000_hierarchy_restructuring.sql  20260409000000_ean_seed_store.sql  20260409010000_backup_portability.sql  20260414000000_amazon_asin.sql  20260414000001_sale_codes.sql
src-tauri/seed/: additives.json  issue_labels.json  soil_types.json  species.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/api/routes/: backups.rs  environments.rs  harvests.rs  health.rs  issues.rs  journal.rs  locations.rs  mod.rs  plants.rs  schedules.rs  seed_store.rs  sensors.rs  species.rs  storage.rs
src-tauri/src/commands/: app.rs  canvas.rs  custom_fields.rs  dashboards.rs  demo.rs  environment.rs  greet.rs  harvests.rs  indoor.rs  integrations.rs  inventory.rs  issues.rs  journal.rs  media.rs  mod.rs  plant_groups.rs  plants.rs  reports.rs  schedules.rs  seed_store.rs  seedling_trays.rs  sensors.rs  species.rs  weather.rs
src-tauri/src/db/: additives.rs  canvas.rs  custom_fields.rs  dashboards.rs  environments.rs  harvests.rs  indoor.rs  integrations.rs  issues.rs  journal.rs  locations.rs  media.rs  mod.rs  models.rs  plant_groups.rs  plants.rs  schedules.rs  seed.rs  seed_store.rs  seedling_observations.rs  seedling_trays.rs  sensors.rs  species.rs  weather.rs
src-tauri/src/events/: mod.rs
src-tauri/src/services/: amazon_asin.rs  asset_tag.rs  backup.rs  backup_jobs.rs  ean_search.rs  eol.rs  export.rs  export_import.rs  gbif.rs  ha_publisher.rs  inaturalist.rs  indoor.rs  issue_generator.rs  lifecycle.rs  media.rs  mod.rs  osm.rs  plant_category.rs  recommendations.rs  schedule_suggestions.rs  scheduler.rs  storage_paths.rs  trefle.rs  weather.rs  weather_alerts.rs  wikipedia.rs
(+224 files in other folders)
