[package]
name = "dirtos"
version = "0.1.17"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dirtos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
specta = { version = "2.0.0-rc.22", features = ["chrono"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
tokio-cron-scheduler = "0.13"
uuid = { version = "1", features = ["v4"] }
image = "0.25"
base64 = "0.22"
cron = "0.12"
async-trait = "0.1"
serialport = "4"
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }
serde_yaml = "0.9"
csv = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
aes-gcm-siv = "0.11"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
